@@ -1,4 +1,6 @@
 dev > 1.9.8.4
+ - The RandomAccessSequenceCache had problems with bases that weren't G/A/T/C/N not being stored. Now bases other than
+   G/A/T/C will be stored as N and not just ignored.
  - New empirical-p mode to estimate p-values from data in text files. This makes it easier to derive p-values for
    simulated data or counts generated by other tools than Goby.
  - methylation region can now estimate empirical p-values. Empirical P-values require biological replicates in at least
